--- a/board_front/src/App.css
+++ b/board_front/src/App.css
@@ -1,4 +1,46 @@
-.detailMain {
+/* 공통 */
+.login, .boardMain, .boardCreate, .boardDetail {
+  margin: 20px;
+}
+
+/* 로그인 페이지 */
+.login >input {
+  margin-bottom: 10px;
+}
+
+.login >button {
+  margin-left: 10px;
+}
+
+/* 게시판 메인 페이지 */
+.search, .pageNagion {
+  position: relative;
+  left: 30%;
+}
+
+
+
+/* 게시글 작성 페이지 */
+.createData {
   display: grid;
-  grid-template-columns: 200px 400px;
+  grid-template-columns: 100px 400px;
+}
+
+.createData > div {
+  margin-bottom: 10px;
+}
+
+/* 게시글 상세조회 페이지 */
+.boardOneData {
+  display: grid;
+  grid-template-columns: 100px 400px;
+}
+
+.boardOneData > div {
+  margin-top: 10px;
+}
+
+.boardOneData > p {
+  border: 1px solid black;
+  padding-bottom: 15px;
 }
